# SPLFLIX

Assignment1/: CMakeLists.txt  Main.cpp  Makefile  Session.cpp  Watchable.cpp
Assignment1/include/: Action.h  Session.h  User.h  Watchable.h
Assignment1/src/: Action.cpp  CreateUser.cpp  Episode.cpp  GenreRecommenderUser.cpp  LengthRecommenderUser.cpp  Main.cpp  Movie.cpp  PrintActionsLog.cpp  RerunRecommenderUser.cpp  Session.cpp  User.cpp  Watch.cpp  Watchable.cpp
